[FIX] mail: improved message post of small messages in chats
Before this commit, posting many small messages in a Discuss
chat / channel was stuttering, which lead to posting messages with
missing characters.

Steps to reproduce:
- Log with Mitchell Admin
- Go to Discuss > channel `#general`
- Quickly post 10 messages numbered from 1, 2, 3, 4, 5, 6, 7, 8, 9, 0
=> about half of messages are not posted

This happens because the composer is inactive until the message is
fully posted. This is far too long for Discuss chat and channels,
where quick sending of small messages is expected. There's even
some optimistic behavior in those conversations, which consists in
pretending the message is posted before it's actually processed by
the server. The composer is disabled even when the newly posted
message is optimistically visible in the thread.

This commit fixes the issue by clearing and enabling the composer
immediately when the message becomes visible in the thread, which
happens immediately when the user makes the action to post the
message. This is made specifically for non-chatter threads, as
chatter threads do not have this optimistic showing of the message
thus it feels best to keep showing the composer content until
the message is clearly in the thread.

------------------------------------

[IMP] mail: improved pending message visual + post again if fail

Before this commit, pending messages had no visual indication that
they were temporary. This could lead to wrong impression that the
message has been posted, so if user quickly quit the page then the
message is lost.

Also if the message failed to post, the composer is cleared and there
was no way to post the message again.

This commit now stylize pending messages by reducing their opacity.
Also when a message is pending for at least 0.5 seconds, a spinning
icon is showing that the message is still being processed, at the
expected place of date of message (so in header next to author name,
or in the sidebar when

--- a/addons/mail/static/src/core/common/message.scss
+++ b/addons/mail/static/src/core/common/message.scss
@@ -59,6 +59,17 @@
     z-index: $o-mail-NavigableList-zIndex;
 }
 
+.o-mail-Message-pendingProgress {
+    animation: o-mail-message-pendingProgress-animation 0s ease-in 0.5s forwards;
+    visibility: hidden;
+}
+
+@keyframes o-mail-message-pendingProgress-animation {
+    to {
+        visibility: visible;
+    }
+}
+
 .o-mail-Message-searchHighlight {
     background: rgba($warning, 0.75);
 }
